--- a/style.css
+++ b/style.css
@@ -784,6 +784,10 @@ h2 {
 		background-position: 70% -10px;
 	}
 
+	#nsec3 > .-phone {
+		bottom: 6.5em;
+	}
+
 	#nsec4 > .-content {
 		max-width: calc(100% - 6em);
 	}
