--- a/style.css
+++ b/style.css
@@ -579,6 +579,10 @@ h2 {
 	#nsec1 > .-content > .-c1 {
 		left: 3em;
 	}
+
+	#nsec3 > .-covermsg {
+		background-position: 35% -75px;
+	}
 }
 
 @media screen and (max-width: 800px) {
@@ -599,7 +603,7 @@ h2 {
 	}
 
 	#nsec3 > .-covermsg {
-		background-position: 35% -130px;
+		background-position: 35% -115px;
 	}
 
 	#nsec2 > .-content, #nsec3 > .-content, #nsec4 > .-content, #nsec5 > .-content {
