--- a/style.css
+++ b/style.css
@@ -856,8 +856,8 @@ h2 {
 	}
 }
 
-.trustpilot-widget {
+/* .trustpilot-widget {
 	float:right;
 	/* margin-left:2%; */
-	margin-top:5%;
-}
+	/* margin-top:5%; */
+/* } */
